fixed client app

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,19 +8,16 @@
 
     @Html(webJarsUtil.css("bootstrap.min.css"))
 
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at(" stylesheets
-    /main.css")">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at(" stylesheets
-    /simplechat.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at(" images
-    /favicon.png")">
+    <link rel="stylesheet" media="screen" href="/assets/stylesheets/main.css">
+    <link rel="stylesheet" media="screen" href="/assets/stylesheets/simplechat.css">
+    <link rel="shortcut icon" type="image/png" href="/assets/
+    images/favicon.png">
     <title>Chat Room</title>
 
 </head>
 
 <body>
 
-<
 <div class="container" id="chat">
     <div class="row chat-window col-xs-5 col-md-3" id="chat_window_1" style="margin-left:10px;">
         <div class="col-xs-12 col-md-12">
